# pyasm-nand2tetris

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  release.yml
pyasm/: __main__.py  assembler.py  cli.py  coder.py  parser.py
tests/: Add.asm  test_assembler.py  test_cli.py  test_coder.py  test_hello.py  test_hello_world.py  test_parser.py
