[tool.poetry]
name = "pyasm"
version = "0.1.5"
description = "ASM Assembler for Nand2Tetris Hack Computer"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
