[tool.poetry]
name = "pyasm"
version = "0.1.7"
description = "ASM Assembler for Nand2Tetris Hack Computer"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pytest-sugar = "^0.9.4"
pytest-xdist = {extras = ["psutil"], version = "^2.2.0"}
pytest-cov = "^2.10.1"
pytest = "^6.2.1"

[tool.poetry.scripts]
pyasm = "pyasm.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
